# mental-mem

./: .gitignore  README.md  adaptive_model.py  baseline_model.py  config.py  counseling_dataset_6sessions_archive.json  counselor_models.py  evaluation.py  generate_dataset.py  generated_counseling_dataset.json  llm_utils.py  main.py  pyproject.toml  run_evaluation.py  shield_gemma_utils.py
output/: counseling_dataset.json  counseling_dataset_6sessions.json  counseling_dataset_6sessions_safety_enriched.json  evaluation_results.json  evaluation_results_full_cohort.json  evaluation_results_full_cohort_safety.json
output/run_logs/case_001/: _case_simulation_log.txt
output/run_logs/case_001/closed_adaptive/: interaction_log.txt
output/run_logs/case_001/closed_baseline/: interaction_log.txt
output/run_logs/case_001/closed_no_memory/: interaction_log.txt
output/run_logs/case_001/local_adaptive/: interaction_log.txt
output/run_logs/case_001/local_baseline/: interaction_log.txt
output/run_logs/case_001/local_no_memory/: interaction_log.txt
output/run_logs/case_002/: _case_simulation_log.txt
results_archive/25pro_judge_41_ref_gemma3_4b/: evaluation_results_full_cohort_safety.json  result_summary.txt
results_archive/41_judge_ref-gemma3_4b/: evaluation_results_full_cohort_safety.json  result_summary.txt
results_archive/41mini_judge_ref-gemma3_4b/: result_summary.txt
results_archive/41mini_judge_ref-gemma3_4b/run_logs/: evaluation_results_full_cohort_safety.json
seed_data/: counseling_data_seed.json
(+514 files in other folders)
