[project]
name = "mental-mem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.12",
    "google-genai>=1.17.0",
    "mem0ai>=0.1.102",
    "ollama>=0.5.1",
    "openai>=1.82.1",
    "pydantic>=2.11.5",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
    "tqdm>=4.67.1",
]
